--- a/no7_spring_data_repository/homework/blog-application/src/main/resources/templates/list.html
+++ b/no7_spring_data_repository/homework/blog-application/src/main/resources/templates/list.html
@@ -11,35 +11,33 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">MyBlog</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Categories
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li th:each="category : ${categories}"><a class="dropdown-item" href="#" th:text="${category.name}"></a></li>
+                            </ul>
                         </li>
                     </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </nav>
 
         <main>
             <div class="container">
-                <!-- Blog posts -->
                 <div class="row">
                     <div class="col-md-8">
-                        <!-- Blog post -->
-                        <div th:each="blog: ${blogList}">
+                        <div th:each="blog: ${blogPage}">
                             <div class="card mb-4">
                                 <div class="card-body">
                                     <h2 class="card-title" th:text="${blog.title}"></h2>
@@ -57,31 +55,43 @@
                                         <i class="fas fa-briefcase position-icon"></i>
                                         <span th:text="${blog.createAt}"></span>
                                     </p>
+                                    <p class="category mb-2 text-muted">
+                                        <i class="fas fa-folder category-icon"></i> Category:  <span th:text="${blog.category.name}"></span>
+                                    </p>
                                     <a href="#" class="btn btn-primary" th:href="@{/detail/__${blog.id}__}">Read More</a>
                                     <span class="float-right">
-                                      <a href="#" class="edit-icon" title="Edit" th:href="@{/edit/__${blog.id}__}"><i class="fas fa-edit"></i></a>
-                                      <a href="#" class="delete-icon" title="Delete" th:href="@{/delete/__${blog.id}__}"><i class="fas fa-trash"></i></a>
+                                      <a class="edit-icon" title="Edit" th:href="@{/edit/__${blog.id}__}"><i class="fas fa-edit text-warning"></i></a>
+                                      <a class="delete-icon" title="Delete" th:href="@{/delete/__${blog.id}__}"><i class="fas fa-trash text-danger"></i></a>
                                     </span>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Add more blog posts here -->
+                        <div>
+                            <ul class="pagination">
+                                <li th:if="${blogPage.hasPrevious()}" class="page-item">
+                                    <a class="page-link" th:href="@{/(page=${currentPage - 1})}">Previous</a>
+                                </li>
+                                <li class="page-item">
+                                    <span class="page-link" th:text="${currentPage + 1}"></span>
+                                </li>
+                                <li th:if="${blogPage.hasNext()}" class="page-item">
+                                    <a class="page-link" th:href="@{/(page=${currentPage + 1})}">Next</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="col-md-4">
-                        <!-- Add new post button -->
                         <div class="mt-4">
                             <a href="#" class="btn btn-success btn-block" th:href="@{/create}">Add New Post</a>
                         </div>
 
-                        <!-- Sidebar content -->
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     <p th:text="${mess}"></p>
                                 </h5>
-                                <!-- Add sidebar content here -->
                             </div>
                         </div>
                     </div>
@@ -90,5 +100,6 @@
         </main>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
