--- a/no7_spring_data_repository/homework/blog-application/src/main/resources/templates/list.html
+++ b/no7_spring_data_repository/homework/blog-application/src/main/resources/templates/list.html
@@ -25,8 +25,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex" role="search" th:action="@{/search}" method="post">
+                        <input name="searchTitle" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
@@ -99,7 +99,6 @@
             </div>
         </main>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
