--- a/no9_aop/homework/library-project-2/src/main/resources/templates/borrow.html
+++ b/no9_aop/homework/library-project-2/src/main/resources/templates/borrow.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List</title>
+    <title>Borrowing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -31,32 +31,37 @@
                 </div>
             </div>
         </nav>
-        <h3 th:text="${mess}"></h3>
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">STT</th>
-                <!--                <th scope="col">ID</th>-->
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Description</th>
-                <th scope="col">Quantity</th>
-                <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="book, status : ${bookList}">
-                <th scope="row" th:text="${status.count}"></th>
-                <!--                <td th:text="${book.id}"></td>-->
-                <td th:text="${book.name}"></td>
-                <td th:text="${book.author}"></td>
-                <td th:text="${book.description}"></td>
-                <td th:text="${book.quantity}"></td>
-                <td><a class="btn btn-primary" th:href="@{/library/borrow/__${book.id}__}">Borrow</a></td>
-            </tr>
-            </tbody>
-        </table>
+
+        <form th:object="${card}" method="post" th:action="@{/library/borrow-book}">
+            <h1>Loan Card</h1>
+            <p>
+                <span>Loan Card Code: </span>
+                <b th:text="${randomCode}"></b>
+                <input type="text" th:id="code" th:name="code" th:value="${randomCode}" style="display: none">
+            </p>
+
+            <p>Selected books:</p>
+            <ul>
+                <th:block th:each="book: ${selectedBooks}">
+                    <input type="text" th:value="${book.id}" name="selectedBookIds" style="display: none">
+                    <li>
+                        <b th:text="${book.name}"></b><br/>
+                        <span th:text="${book.description}"></span><br/>
+                        <small style="color: darkgray" th:text="${book.author}"></small>
+                    </li>
+                    <span style="color: darkgray;">---------------------------------------</span>
+                </th:block>
+            </ul>
+            <p scope="row">Student: </p>
+                <select th:field="*{student}">
+                    <option th:each="student : ${studentList}" th:value="${student.id}">
+                        <span th:text="${student.name}"></span>
+                    </option>
+                </select>
+            <p scope="row" colspan="2"><button class="btn btn-primary">Borrow</button></p>
+        </form>
     </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
