--- a/no9_aop/homework/library-project-2/src/main/resources/templates/list.html
+++ b/no9_aop/homework/library-project-2/src/main/resources/templates/list.html
@@ -31,31 +31,41 @@
                 </div>
             </div>
         </nav>
-        <h3 th:text="${mess}"></h3>
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">STT</th>
-                <!--                <th scope="col">ID</th>-->
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Description</th>
-                <th scope="col">Quantity</th>
-                <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="book, status : ${bookList}">
-                <th scope="row" th:text="${status.count}"></th>
-                <!--                <td th:text="${book.id}"></td>-->
-                <td th:text="${book.name}"></td>
-                <td th:text="${book.author}"></td>
-                <td th:text="${book.description}"></td>
-                <td th:text="${book.quantity}"></td>
-                <td><a class="btn btn-primary" th:href="@{/library/borrow/__${book.id}__}">Borrow</a></td>
-            </tr>
-            </tbody>
-        </table>
+        <h3 th:text="${mess}" style="color: blue"></h3>
+        <form method="GET" th:action="@{library/borrow-book}">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">STT</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="book, status : ${bookList}">
+                    <th scope="row" th:text="${status.count}"></th>
+                    <td th:text="${book.name}"></td>
+                    <td th:text="${book.author}"></td>
+                    <td th:text="${book.description}"></td>
+                    <td th:text="${book.quantity}"></td>
+                    <td><input type="checkbox" name="selectedBookIds" th:value="${book.id}"></td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button type="submit" class="btn btn-primary">Borrow</button></td>
+                </tr>
+                </tfoot>
+            </table>
+        </form>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
