--- a/no9_aop/homework/library-project-2/src/main/resources/templates/loanCard.html
+++ b/no9_aop/homework/library-project-2/src/main/resources/templates/loanCard.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List</title>
+    <title>Loan Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -31,32 +31,38 @@
                 </div>
             </div>
         </nav>
-        <h3 th:text="${mess}"></h3>
+        <h3 th:text="${mess}" style="color: blue"></h3>
         <table class="table">
             <thead>
-            <tr>
-                <th scope="col">STT</th>
-                <!--                <th scope="col">ID</th>-->
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Description</th>
-                <th scope="col">Quantity</th>
-                <th scope="col"></th>
-            </tr>
+                <tr>
+                    <th scope="col">STT</th>
+                    <th scope="col">Code</th>
+                    <th scope="col">Student</th>
+                    <th scope="col">Class</th>
+                    <th scope="col">Loan Date</th>
+                    <th scope="col">Returned Date</th>
+                    <th scope="col">Return</th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="book, status : ${bookList}">
-                <th scope="row" th:text="${status.count}"></th>
-                <!--                <td th:text="${book.id}"></td>-->
-                <td th:text="${book.name}"></td>
-                <td th:text="${book.author}"></td>
-                <td th:text="${book.description}"></td>
-                <td th:text="${book.quantity}"></td>
-                <td><a class="btn btn-primary" th:href="@{/library/borrow/__${book.id}__}">Borrow</a></td>
-            </tr>
+                <tr th:each="card, status : ${cardList}">
+                    <th scope="row" th:text="${status.count}"></th>
+                    <td th:text="${card.code}"></td>
+                    <td th:text="${card.student.name}"></td>
+                    <td th:text="${card.student.classRoom}"></td>
+                    <td th:text="${card.loanDate}"></td>
+                    <td th:text="${card.returnDate}"></td>
+                    <td>
+                        <span th:if="${card.status == false}">
+                            <a class="btn btn-primary" th:href="@{/library/return-book/__${card.id}__}">Return</a>
+                        </span>
+                        <span th:if="${card.status == true}" style="color: darkgray">Returned</span>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
